--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 
 <body>
 
-    <form>
+    <form class='box'>
         <label for="input">Input # Here</label>
-        <input id="input" name="input" type="number">
-        
-        <input type="submit" value="Submit">
-
-        <label for="output">Output # Here</label>
-        <input id="output" name="output" type="number">
-
         <br>
-
+        <input id="input" name="input" type="number">
+        <br>
         <label for="incoming">Select your Temperature Scale</label>
         <select id="incoming" name="incoming">
             <option value="Kelvin">Kelvin</option>
             <option value="Celsius">Celsius</option>
             <option value="Farenheit">Farenheit</option>
         </select>
-        
+    </form> 
+
+    <input type="submit" value="Submit">
+
+    <form class='box'>
+        <label for="output">Output # Here</label>
+        <br>
+        <input id="output" name="output" type="number">
+        <br>
         <label for="outgoing">Select your Temperature Scale</label>
         <select id="outgoing" name="outgoing">
             <option value="Kelvin">Kelvin</option>
@@ -39,8 +41,6 @@
             <option value="Farenheit">Farenheit</option>
         </select>
     </form>
-
-
 
 </body>
 </html>
