--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </select>
     </form> 
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="=">
 
     <form class='box'>
         <label for="output">Output # Here</label>
