add flex to boxes

--- a/index.html
+++ b/index.html
@@ -14,33 +14,35 @@
 
 <body>
 
-    <form class='box'>
-        <label for="input">Input # Here</label>
-        <br>
-        <input id="input" name="input" type="number">
-        <br>
-        <label for="incoming">Select your Temperature Scale</label>
-        <select id="incoming" name="incoming">
-            <option value="Kelvin">Kelvin</option>
-            <option value="Celsius">Celsius</option>
-            <option value="Farenheit">Farenheit</option>
-        </select>
-    </form> 
+    <section class="container">
+        <form class="box">
+            <label for="input">Input # Here</label>
+            <br>
+            <input id="input" name="input" type="number">
+            <br>
+            <label for="incoming">Select your Temperature Scale</label>
+            <select id="incoming" name="incoming">
+                <option value="Kelvin">Kelvin</option>
+                <option value="Celsius">Celsius</option>
+                <option value="Farenheit">Farenheit</option>
+            </select>
+        </form> 
 
-    <input type="submit" value="=">
+        <input class="button" type="submit" value="=">
 
-    <form class='box'>
-        <label for="output">Output # Here</label>
-        <br>
-        <input id="output" name="output" type="number">
-        <br>
-        <label for="outgoing">Select your Temperature Scale</label>
-        <select id="outgoing" name="outgoing">
-            <option value="Kelvin">Kelvin</option>
-            <option value="Celsius">Celsius</option>
-            <option value="Farenheit">Farenheit</option>
-        </select>
-    </form>
+        <form class="box">
+            <label for="output">Output # Here</label>
+            <br>
+            <input id="output" name="output" type="number">
+            <br>
+            <label for="outgoing">Select your Temperature Scale</label>
+            <select id="outgoing" name="outgoing">
+                <option value="Kelvin">Kelvin</option>
+                <option value="Celsius">Celsius</option>
+                <option value="Farenheit">Farenheit</option>
+            </select>
+        </form>
+    </section>
 
 </body>
 </html>
