change to double quotes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <form class='box'>
+    <form class="box">
         <label for="input">Input # Here</label>
         <br>
         <input id="input" name="input" type="number">
@@ -29,7 +29,7 @@
 
     <input type="submit" value="=">
 
-    <form class='box'>
+    <form class="box">
         <label for="output">Output # Here</label>
         <br>
         <input id="output" name="output" type="number">
