--- a/calc.html
+++ b/calc.html
@@ -14,12 +14,8 @@
 
 <body>
 
-    <article class="box">
-        <?php print_r($_GET['input']);?>
-    </article>
-
     <section class="container">
-        <form class="box">
+        <form class="box" method="get" action="calc.html">
             <label for="input">Input # Here</label>
             <br>
             <input id="input" name="input" type="number">
