--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
+  </head>
 
-<header>
-    <h1>Temperature Calculator</h1>
-    <h4>designed by Hendo</h4>
-</header>
-
-<body>
-
+  <body>
+    <header>
+      <h1>Temperature Calculator</h1>
+    </header>
     <section class="container">
-        <form class="box">
-            <label for="input">Input # Here</label>
-            <br>
-            <input id="input" name="input" type="number">
-            <br>
-            <label for="incoming">Select your Temperature Scale</label>
-            <select id="incoming" name="incoming">
-                <option value="Kelvin">Kelvin</option>
-                <option value="Celsius">Celsius</option>
-                <option value="Farenheit">Farenheit</option>
-            </select>
-        </form> 
-
-        <input class="button" type="submit" value="=">
-
-        <form class="box">
-            <label for="output">Output # Here</label>
-            <br>
-            <input id="output" name="output" type="number">
-            <br>
-            <label for="outgoing">Select your Temperature Scale</label>
-            <select id="outgoing" name="outgoing">
-                <option value="Kelvin">Kelvin</option>
-                <option value="Celsius">Celsius</option>
-                <option value="Farenheit">Farenheit</option>
-            </select>
-        </form>
+      <form class="box">
+        <label for="input">Input # Here</label>
+        <br>
+        <input id="input" name="input" type="number">
+        <br>
+        <label for="incoming">Select your Temperature Scale</label>
+        <select id="incoming" name="incoming">
+          <option value="Kelvin">Kelvin</option>
+          <option value="Celsius">Celsius</option>
+          <option value="Farenheit">Farenheit</option>
+        </select>
+      </form> 
+      <input class="button" type="submit" value="=">
+      <form class="box">
+        <label for="output">Output # Here</label>
+        <br>
+        <input id="output" name="output" type="number">
+        <br>
+        <label for="outgoing">Select your Temperature Scale</label>
+        <select id="outgoing" name="outgoing">
+          <option value="Kelvin">Kelvin</option>
+          <option value="Celsius">Celsius</option>
+          <option value="Farenheit">Farenheit</option>
+        </select>
+      </form>
     </section>
+    <footer>
+      <button id="get-normal" name="get-normal" method="get" action="/normal/static.html"></button>
+      <h4>designed by Hendo</h4>
+    </footer>
+  </body>
 
-</body>
 </html>
