update-index.html

--- a/normal/static.html
+++ b/normal/static.html
@@ -15,7 +15,7 @@
 <body>
 
     <section class="container">
-        <form class="box" method="get" action="calc.html">
+        <form class="box" method="get" action="pre.php">
             <br>
             <input id="return-line" type="number" name="return-line"> 
             <hr>
