format normal/static.html

--- a/normal/static.html
+++ b/normal/static.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
+  </head>
 
-<header>
-    <h1>Temperature Calculator</h1>
-    <h4>designed by Hendo</h4>
-</header>
-
-<body>
-
+  <body>
+    <header>
+      <h1>Temperature Calculator</h1>
+      <h4>designed by Hendo</h4>
+    </header>
     <section class="container">
-        <form class="box" method="get" action="pre.php">
-            <br>
-            <input id="return-line" type="number" name="return-line"> 
-            <hr>
-            <label for="num1">1</label>
-                <input id="num1" name="num1" type="number">
-            <label for="num2">2</label>
-                <input id="num2" name="num2" type="number">
-            <label for="num3">3</label>
-                <input id="num3" name="num3" type="number">
-            <label for="num4">4</label>
-                <input id="num4" name="num4" type="number">
-            <label for="num5">5</label>
-                <input id="num5" name="num5" type="number">
-            <label for="num6">6</label>
-                <input id="num6" name="num6" type="number">
-            <label for="num7">7</label>
-                <input id="num7" name="num7" type="number">
-            <label for="num8">8</label>
-                <input id="num8" name="num8" type="number">
-            <label for="num9">9</label>
-                <input id="num9" name="num9" type="number">
-            <hr>
-            <label for="submit">=</label>
-                <input id=submit name="submit" type="button">
-            <br>
-        </form> 
+      <form class="box" method="get" action="pre.php">
+        <br>
+        <input id="return-line" type="number" name="return-line"> 
+        <hr>
+        <label for="num1">1</label>
+          <input id="num1" name="num1" type="number">
+        <label for="num2">2</label>
+          <input id="num2" name="num2" type="number">
+        <label for="num3">3</label>
+          <input id="num3" name="num3" type="number">
+        <label for="num4">4</label>
+          <input id="num4" name="num4" type="number">
+        <label for="num5">5</label>
+          <input id="num5" name="num5" type="number">
+        <label for="num6">6</label>
+          <input id="num6" name="num6" type="number">
+        <label for="num7">7</label>
+          <input id="num7" name="num7" type="number">
+        <label for="num8">8</label>
+          <input id="num8" name="num8" type="number">
+        <label for="num9">9</label>
+          <input id="num9" name="num9" type="number">
+        <hr>
+        <label for="submit">=</label>
+          <input id=submit name="submit" type="button">
+        <br>
+      </form> 
     </section>
+    <footer>
+    <button id="get-temp" name="get-temp" method="get" action="../index.html"></button>
+      <h4>designed by Hendo</h4>
+    </footer>
 
 </body>
 </html>
