--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Temperature Calculator</h1>
     </header>
-    <section class="container">
+    <article class="container">
       <form class="box">
         <label for="input">Input # Here</label>
         <br>
@@ -37,9 +37,10 @@
           <option value="Farenheit">Farenheit</option>
         </select>
       </form>
-    </section>
+    </article>
     <footer>
-      <button id="get-normal" name="get-normal" method="get" action="/normal/static.html"></button>
+      <label for="get-normal">Go to Normal Calculator</label>
+        <input type="button" id="get-normal" name="get-normal" method="get" action="./normal/static.html"></button>
       <h4>designed by Hendo</h4>
     </footer>
   </body>
