--- a/normal/static.html
+++ b/normal/static.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Calculator</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="buttons.css" />
   </head>
 
   <body>
@@ -13,36 +14,37 @@
       <h4>designed by Hendo</h4>
     </header>
     <section class="container">
-      <form class="box" method="get" action="pre.php">
+      <form class="button-box" method="get" action="pre.php">
         <br>
         <input id="return-line" type="number" name="return-line"> 
         <hr>
         <label for="num1">1</label>
-          <input id="num1" name="num1" type="number">
+          <button id="num1" name="num1" type="number">
         <label for="num2">2</label>
-          <input id="num2" name="num2" type="number">
+          <button id="num2" name="num2" type="number">
         <label for="num3">3</label>
-          <input id="num3" name="num3" type="number">
+          <button id="num3" name="num3" type="number"><br>
         <label for="num4">4</label>
-          <input id="num4" name="num4" type="number">
+          <button id="num4" name="num4" type="number">
         <label for="num5">5</label>
-          <input id="num5" name="num5" type="number">
+          <button id="num5" name="num5" type="number">
         <label for="num6">6</label>
-          <input id="num6" name="num6" type="number">
+          <button id="num6" name="num6" type="number"><br>
         <label for="num7">7</label>
-          <input id="num7" name="num7" type="number">
+          <button id="num7" name="num7" type="number">
         <label for="num8">8</label>
-          <input id="num8" name="num8" type="number">
+          <button id="num8" name="num8" type="number">
         <label for="num9">9</label>
-          <input id="num9" name="num9" type="number">
+          <button id="num9" name="num9" type="number"><br>
         <hr>
         <label for="submit">=</label>
-          <input id=submit name="submit" type="button">
+          <button id=submit name="submit">
         <br>
       </form> 
     </section>
     <footer>
-    <button id="get-temp" name="get-temp" method="get" action="../index.html"></button>
+      <?php echo <p>"Not looking good, Boss"</p>
+        <button class='super-button' id='get-temp' name='get-temp' method='get' action='../index.html'>Go to Temperature Calculator</button>
       <h4>designed by Hendo</h4>
     </footer>
 
